# trabotto

./: .gitignore  README.md  TODO.txt  docker-compose.yml  notes.txt  pom.xml
.github/workflows/: ci.yml
V1/: README.md  pom.xml
docs/: ARCHITECTURE-updates.md  ARCHITECTURE.md  CLAUDE_CODE_DOMAIN_INSTRUCTIONS.md  CLAUDE_CODE_SIGNAL_NORMALIZER.md  ROADMAP.md
docs/bull/neofiti/: 1.txt  1.yml  2.txt
docs/phases/: PHASE-0.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md
ingest/: Dockerfile  env.example  pyproject.toml  requirements.txt
ingest/src/: kafka_producer.py  signal_normalizer.py  telegram_listener.py  transcribe.py
ingest/tests/: test_signal_normalizer.py  test_telegram_listener.py
knowledge/: bull-vocabulary-raw.json  gpt-transcription-prompt.md  vocabulary-clean.json
knowledge/rules/: RULES_INDEX.md  _consolidate.py  consolidated-context.yml  consolidated-rules.yml  report-claude.md  report-rules-by-codex.txt
knowledge/rules/live-streaming-su-youtube/: 003-medium.yml  004-medium.yml  005-medium.yml
knowledge/transcriptions/: 0-medium.txt  003-medium.txt  004-medium.txt  005-medium.txt  008-medium.txt  011-medium.txt  025-medium.txt  026-medium.txt  028-medium.txt  029-medium.txt  032-medium.txt  034-medium.txt  035-medium.txt  036-medium.txt  037-medium.txt  038-medium.txt  040-medium.txt  041-medium.txt  043-medium.txt  bull-transcript-engineering.md  gpt-transcription-prompt.md
trabotto-application/: pom.xml
trabotto-boot/: pom.xml
trabotto-domain/: pom.xml
trabotto-infrastructure/: pom.xml
(+528 files in other folders)
