[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trabotto-ingest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36",
    "python-dotenv>=1.0",
    "confluent-kafka>=2.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
